--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,8 @@
     <title>SIPOC</title>
   </head>
   <body>
-    <h1>Welcome </h1>
-    <p>Description here</p>
+    <h1>Welcome to SIPOC</h1>
+    <p>(Single Point of Contact)</p>
+     <p>Support tickets tracker & performance monitor</p>
   </body>
 </html>
