nav fixed, ongoing delete route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SIPOC</title>
+      <a href="/tickets">Browse Tickets</a>
+      <a href="/tickets/new">Add New Ticket</a>
+      <a href="/cpos/">List of CPO partners</a>
+      <a href="/cpos/new">Add New CPO Partner</a>
   </head>
   <body>
     <h1>Welcome to SIPOC</h1>
