--- a/views/tickets/index.ejs
+++ b/views/tickets/index.ejs
@@ -7,7 +7,7 @@
     <title>Tickets Index</title>
     <a href="/tickets">Browse Tickets</a>
     <a href="/tickets/new">Add New Ticket</a>
-    <a href="/tickets/">Back to Tickets</a>
+    <a href="/cpos/">List of CPO partners</a>
   </head>
   <body>
     <h1>All Tickets</h1>
