--- a/views/cpos/new.ejs
+++ b/views/cpos/new.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New CPO (Charging Point Operator)</title>
+    <a href="/cpos/">Back to CPOs</a>
   </head>
   <body>
     <h1>Add a new partner!</h1>
