--- a/views/tickets/new.ejs
+++ b/views/tickets/new.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New support ticket</title>
+    <a href="/tickets/">Back to Tickets</a>
   </head>
   <body>
     <h1>Create a ticket!</h1>
