--- a/views/cpos/index.ejs
+++ b/views/cpos/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CPO Index</title>
     <a href="/tickets">Browse Tickets</a>
-    <a href="/cpos/">Back to CPOs</a>
+    <a href="/cpos/new">Create a new CPO Partner</a>
   </head>
   <body>
     <h1>All CPOs partners listed</h1>
@@ -14,6 +14,5 @@
       <li><a href="/cpos/<%= cpo._id %>"><%= cpo.cpoName %></a></li>
     <% }); %>
   </ul>
-
   </body>
 </html>
