--- a/views/tickets/show.ejs
+++ b/views/tickets/show.ejs
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1><%= ticket.subject %></h1> 
+    <a href="/tickets/<%= ticket._id %>/edit">Edit the ticket "<%= ticket.subject %>"</a>
     <p><%= ticket.escalationId %></p> 
     <p><%= ticket.description %></p> 
     <p><%= ticket.customerEmail %></p>
@@ -25,6 +26,8 @@
   <% } else { %>
     <p>Do no contact the customer.</p>
   <% } %>
-       
+  <form action="/tickets/<%=ticket._id%>?_method=DELETE" method="POST">
+  <button type="submit">Delete ticket</button>
+</form>
   </body>
 </html>
