Authn ongoing. Session-based authentication pending

--- a/views/cpos/index.ejs
+++ b/views/cpos/index.ejs
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CPO Index</title>
-    <a href="/tickets">Browse Tickets</a>
-    <a href="/cpos/new">Create a new CPO Partner</a>
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
+>
+     <a href="/tickets">Browse Tickets</a>
+      <a href="/tickets/new">Add New Ticket</a>
+      <a href="/cpos/">List of CPO partners</a>
+      <a href="/cpos/new">Add New CPO Partner</a>
   </head>
   <body>
     <h1>All CPOs partners listed</h1>
