--- a/views/tickets/index.ejs
+++ b/views/tickets/index.ejs
@@ -5,9 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tickets Index</title>
-    <a href="/tickets">Browse Tickets</a>
-    <a href="/tickets/new">Add New Ticket</a>
-    <a href="/cpos/">List of CPO partners</a>
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
+>
+        <a href="/tickets">Browse Tickets</a>
+      <a href="/tickets/new">Add New Ticket</a>
+      <a href="/cpos/">List of CPO partners</a>
+      <a href="/cpos/new">Add New CPO Partner</a>
   </head>
   <body>
     <h1>All Tickets</h1>
