--- a/views/tickets/show.ejs
+++ b/views/tickets/show.ejs
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= ticket.subject %></title> 
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
+>
     <a href="/tickets/">Back to Tickets</a>
   </head>
   <body>
