authn done. res.locals pending

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,27 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
 >
-      <a href="/auth/sign-up">Sign up</a>
-
   </head>
   <body>
-    <h1>Welcome to SIPOC</h1>
+        <% if (user) { %>
+    <h1>Welcome to the SIPOC, <%= user.username %>!</h1>
+      <p><a href="/tickets">Browse Tickets</a></p>
+      <p><a href="/tickets/new">Add New Ticket</a></p>
+      <p><a href="/cpos/">List of CPO partners</a></p>
+      <p><a href="/cpos/new">Add New CPO Partner</a></p>
+       <p>
+        <a href="/auth/sign-out">Sign out</a>
+      </p>
+    <% } else { %>
+    <h1>Welcome to the app, guest.</h1>
+    <p>
+      <a href="/auth/sign-up">Sign up</a> or <a href="/auth/sign-in">sign in</a>.
+    </p>
+    <% } %>
     <p>(Single Point of Contact)</p>
      <p>Support tickets tracker & performance monitor</p>
+
+     <p><a href="/vip-lounge">Get into the VIP Users Only lounge!</a></p>
+
   </body>
 </html>
