--- a/views/cpos/edit.ejs
+++ b/views/cpos/edit.ejs
@@ -3,34 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New CPO (Charging Point Operator)</title>
+    <title>Edit CPO (Charging Point Operator)</title>
     <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
->
-    <a href="/cpos/">Back to CPOs</a>
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
+    >
   </head>
   <body>
-    <h1>Edit the partner</h1>
-    <form action="/cpos/<%=cpo._id%>?_method=PUT" method="POST"></form>
+    <section class="section">
+      <div class="container">
 
-    <label for="cpoName"> CPO Name:</label>
-    <input type="text" name="cpoName" value="<%= cpo.cpoName %>" />
+        <a class="button is-link mb-4" href="/cpos/">Back to CPOs</a>
 
-    <label for="contactEmail">Contact Email:</label>
-    <input type="text" name="contactEmail" value="<%= cpo.contactEmail %>"/>
+        <h1 class="title">Edit Partner Information</h1>
 
-    <label for="hasSla">Does this partner has an SLA?</label>
-    <input type="checkbox" name="hasSla" <% if (ticket.hasSla) { %>checked<% } %>/>
+        <form action="/cpos/<%= cpo._id %>?_method=PUT" method="POST">
 
-    <label for="city">City:</label>
-    <input type="text" name="city" value="<%= cpo.city %>" />
+          <div class="field">
+            <label class="label">CPO Name:</label>
+            <div class="control">
+              <input class="input" type="text" name="cpoName" value="<%= cpo.cpoName %>">
+            </div>
+          </div>
 
-    <label for="country">Country:</label>
-    <input type="text" name="country" value="<%= cpo.country %>" />
+          <div class="field">
+            <label class="label">Contact Email:</label>
+            <div class="control">
+              <input class="input" type="text" name="contactEmail" value="<%= cpo.contactEmail %>">
+            </div>
+          </div>
 
-    <button type="submit">Save partner editing</button>
+          <div class="field">
+            <label class="checkbox">
+              <input type="checkbox" name="hasSla" <% if (cpo.hasSla) { %>checked<% } %> >
+              Does this partner have an SLA?
+            </label>
+          </div>
 
-  </form>
-</body>
+          <div class="field">
+            <label class="label">City:</label>
+            <div class="control">
+              <input class="input" type="text" name="city" value="<%= cpo.city %>">
+            </div>
+          </div>
+
+          <div class="field">
+            <label class="label">Country:</label>
+            <div class="control">
+              <input class="input" type="text" name="country" value="<%= cpo.country %>">
+            </div>
+          </div>
+
+          <div class="field">
+            <div class="control">
+              <button class="button is-primary" type="submit">Save Partner Editing</button>
+            </div>
+          </div>
+
+        </form>
+
+      </div>
+    </section>
+  </body>
 </html>
