--- a/views/tickets/index.ejs
+++ b/views/tickets/index.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,21 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tickets Index</title>
     <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
->
-        <a href="/tickets">Browse Tickets</a>
-      <a href="/tickets/new">Add New Ticket</a>
-      <a href="/cpos/">List of CPO partners</a>
-      <a href="/cpos/new">Add New CPO Partner</a>
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
+    >
   </head>
   <body>
-    <h1>All Tickets</h1>
-  <ul>
-    <% tickets.forEach(ticket => { %>
-      <li><a href="/tickets/<%= ticket._id %>"><%= ticket.subject %></a></li>
-    <% }); %>
-  </ul>
-
+    <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+      <div class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item" href="/tickets">Browse Tickets</a>
+          <a class="navbar-item" href="/tickets/new">Add New Ticket</a>
+          <a class="navbar-item" href="/cpos/">List of CPO Partners</a>
+          <a class="navbar-item" href="/cpos/new">Add New CPO Partner</a>
+        </div>
+      </div>
+    </nav>
+    <section class="section">
+      <div class="container">
+        <h1 class="title">All Tickets</h1>
+        <ul>
+          <% tickets.forEach(ticket => { %>
+            <li>
+              <a href="/tickets/<%= ticket._id %>" class="has-text-link">
+                <%= ticket.subject %>
+              </a>
+            </li>
+          <% }); %>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
