--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
         <% if (user) { %>
           <h1 class="title">Welcome to SIPOC, <%= user.username %>!</h1>
         <% } else { %>
-          <h1 class="title">Welcome to the app, guest.</h1>
+          <h1 class="title">Welcome to SIPOC. Login in!</h1>
         <% } %>
 
         <p class="subtitle">(Single Point of Contact)</p>
